PLGTG-4 Add all options of DTO + analytics

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -23,6 +23,11 @@
     <name>Guided Tour Plugin :: client</name>
     <dependencies>
         <dependency>
+            <groupId>com.codenvy.platform-api</groupId>
+            <artifactId>codenvy-api-analytics</artifactId>
+            <version>${codenvy.platform-api.version}</version>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>gwt-tour</artifactId>
             <version>${project.version}</version>
